Introduced sonarlint and adjusted the main code base for its rules to comply